[package]
name = "energy_comparator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
clap = "4.4.15"
serde = { version = "1.0.195", features = ["derive"] }
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
